# meshsmoothing

./: CMakeLists.txt
DRL/: DeepLearningNetwork.cpp  DeepLearningNetwork.h  MWCNNLayerImpl.cpp  MWCNNLayerImpl.hpp  MWMkldnnUtils.cpp  MWMkldnnUtils.hpp  MWTanhLayer.cpp  MWTanhLayer.hpp  MWTanhLayerImpl.cpp  MWTanhLayerImpl.hpp  MWTargetNetworkImpl.cpp  MWTargetNetworkImpl.hpp  evaluatePolicy.cpp  evaluatePolicy.h  evaluatePolicy_data.cpp  evaluatePolicy_data.h  evaluatePolicy_initialize.cpp  evaluatePolicy_initialize.h  evaluatePolicy_rtwutil.cpp  evaluatePolicy_rtwutil.h  evaluatePolicy_terminate.cpp  evaluatePolicy_terminate.h  evaluatePolicy_types.h  predict.cpp  predict.h  rtwtypes.h
example/: 225-Fandisk_MC.off  ReadSTL.m  angle-based-first.stl  myfirst.stl
example/1/: getmefirst.stl  myfirst_1.stl
example/7/: naca0012_bad.stl  naca0012_pw.stl
inc/: NegaOptimize.h  dataType.h  equation.h  meshquality.h  smoothing.h  writefile.h
lib/OpenMesh7.1/lib/: OpenMeshCore.lib  OpenMeshTools.lib  OpenMeshToolsd.lib
lib/OpenVolumeMesh2.0/lib/: OpenVolumeMesh.lib
opt/: opt3.txt  opt4.txt  opt5.txt  opt6.txt  opt7.txt  opt8.txt  opt9.txt
python_NN/: imp_mesh_by_ANN.py  imp_mesh_by_optimization.py
src/: NegaOptimize.cpp  equation.cpp  main_DRL.cpp  main_compare.cpp  main_negopt.cpp  main_quality.cpp  main_start.cc  main_test.cpp  main_timecal.cpp  mainstart.cc  meshquality.cpp  smoothing.cpp  writefile.cpp
